// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown Button Base renders a block DropdownButtonBase 1`] = `
<div
  className="dropdown-button-base is-block"
>
  <div>
    test contents
  </div>
  <Dropdown
    isOpen={false}
    openedViaKeyboard={false}
    requestClose={[Function]}
    targetRef={[Function]}
  >
    <Item
      label="1st option"
      onSelect={[Function]}
    />
  </Dropdown>
</div>
`;

exports[`Dropdown Button Base renders a default DropdownButtonBase 1`] = `
<div
  className="dropdown-button-base"
>
  <div>
    test contents
  </div>
  <Dropdown
    isOpen={false}
    openedViaKeyboard={false}
    requestClose={[Function]}
    targetRef={[Function]}
  >
    <Item
      label="1st option"
      onSelect={[Function]}
    />
  </Dropdown>
</div>
`;

exports[`Dropdown Button Base renders a disabled DropdownButtonBase 1`] = `
<div
  className="dropdown-button-base"
>
  <div>
    test contents
  </div>
  <Dropdown
    isOpen={false}
    openedViaKeyboard={false}
    requestClose={[Function]}
    targetRef={[Function]}
  >
    <Item
      label="1st option"
      onSelect={[Function]}
    />
  </Dropdown>
</div>
`;

exports[`Dropdown Button Base renders an open DropdownButtonBase 1`] = `
<div
  className="dropdown-button-base"
>
  <div>
    test contents
  </div>
  <Dropdown
    isOpen={true}
    openedViaKeyboard={false}
    requestClose={[Function]}
    targetRef={[Function]}
  >
    <Item
      label="1st option"
      onSelect={[Function]}
    />
  </Dropdown>
</div>
`;
